--- a/Putnam Predict.ipynb
+++ b/Putnam Predict.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Putnam Predictions\n",
     "\n",
-    "I'm cooked for this won't lie\n",
+    "This is going to be hard\n",
     "so my strategy is going to be a more analytical one: classify putnam problems and try to predict whats likely to show up on the exam this year\n",
     "I plan on writing the exam the next couple years so this is V0.01"
    ]
